--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ Cambiemos el fondo y el color de fuente de los enlaces de nuestro menú cuando e
   }
 
 /* esta es como el slogan de mi sitio web*/
-.main-para {
+.mensaje_inspirador {
     font-size: 1.5em;
     line-height: 1.5em;
     margin: 50px auto;
