--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@ nav {
     text-align: center;
     margin: 0 auto;
     font-size: 1em;
+    width: 100%;
   }
   nav  {
     list-style-type: none;
