--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,12 +17,17 @@ https://coolors.co/5d8fd0-c9e265-ff914d-ffde5a-000000-ffffff
 }
 
 /*aqui editaremos la parte del navegador*/
+#navegacion {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+}
 nav {
     background-color: #ffffff;
     line-height: 3em;
     text-align: center;
     margin: 0 auto;
-    font-size: 1em;
+    font-size: 0.9em;
     width: 100%;
   }
   nav  {
