--- a/challenge/styles/styles.css
+++ b/challenge/styles/styles.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
     text-align: center;
     display: block;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 h1 {
     color: #ffffff;
@@ -14,10 +14,23 @@ h1:hover {
 .cita{
     text-align: center;
     margin: 0 auto;
-    font-size: 1.5em;
-    width: 100%;
+    font-size: 1em;
+    width:30%;
+    height:30%;
     display: block;
     color: #ffffff;
+}
+#centrado{
+    text-align: center;
+    margin: 0 auto;
+}
+
+.lista{
+    text-align: left;
+    margin: 0 auto;
+    font-size: 1em;
+    width:30%;
+    height:30%;
 }
 
 #foto {
@@ -28,8 +41,8 @@ h1:hover {
     padding: 30px;
 }
 .imagen {
-    width:30%;
-    height:30%;
+    width:20%;
+    height:20%;
     border-radius:50%;
 }
 
@@ -37,11 +50,21 @@ h1:hover {
     text-align: center;
     margin: 0 auto;
     display: block;
-    width:15%;
-    height:15%;
+    width:30%;
+    height:30%;
     color: #ffffff;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 body {
     background: #FBA6C9;
+}
+
+footer{
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+    width:30%;
+    height:30%;
+    font-size: 1em;
+    padding: 30px;
 }
