--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,64 +1,81 @@
+
+/* change the values below to your colors from your palett
+azul: #2D7FC9;
+negro: #000000;
+naranja: #EE3224;
+blaco: #ffffff;
+*/
+
+/*ajustes de alineacion*/
 #content {
     max-width: 1600px;
     margin: 0 auto;
   }
-
 nav a, #hero-msg h1, #hero-msg, h4, .button-box, main section {
     text-align: center;
 }
 
+/*esta es la caja*/
 #background {
     height: 725px;
+    background-color: #EE3224;
 }
 
+
 body {
-    background-color: #fcfbfb; 
+    background-color: #ffffff; 
 }
+
 header {
-    background-color:rgba(20,30,13, .7);
+    background-color: #ffffff;
 }
+
+/* Navigation Color */
 nav a:hover {
-    background-color: black;
+    background-color: #ffffff;
+    color: #EE3224;
+}
+nav a {
+    background-color: #EE3224;
+    text-align: center;
     color: #ffffff;
+    text-decoration: none;
 }
 .book, .join {
-    background-color: #fcfbfb;
-    color: black;
+    background-color: #EE3224;
+    color: #ffffff;
     text-align: center;
     text-decoration: none;
 }
 .book:hover, .join:hover {
-    background-color:rgba(20,30,13, .7);
-    color: #000000;
+    background-color: #ffffff;
+    color: #EE3224;
 }
-#background {
-    background-color: black;
-}
+
+
 .msg {
-    background-color: #fcfbfb; 
+    background-color: #2D7FC9; 
 }
-footer {
-    background-color:rgba(20,30,13, .7);
-    color: #000000;
+.msg h2 {
+    background-color: #2D7FC9;
 }
-nav a {
-    background-color: black;
-    text-align: center;
-    color: #fcfbfb;
-    text-decoration: none;
-}
-.home-title {
-    background-color: #fcfbfb; 
+.msg p {
+    background-color: #2D7FC9; 
 }
 h4 {
     color: #000000;
 }
-.msg h2 {
-    background-color: black;
+
+footer {
+    background-color:rgba(20,30,13, .7);
+    color: #000000;
 }
-.msg p {
+
+.home-title {
     background-color: #fcfbfb; 
 }
+
+
 footer a {
     color: #000000;
     text-align: center;
