--- a/challenge_2/styles/styles-challenge-two.css
+++ b/challenge_2/styles/styles-challenge-two.css
@@ -1,16 +1,30 @@
-footer {
-    background-color: gray;
-}
 #content {
     max-width: 1600px;
     margin: 0 auto;
+    background-color: gray;
   }
-#imagen-cabecera {
+.imagen-cabecera {
     width: 100%;
 }
-#imagenredonda {
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.flex-item {
+  display: flex;
+  padding: 30px;
+  margin: 30px;
+  flex: 1;
+  width: 300px;
+  height: 300px;
+}
+.circle {
     border-radius:50%;
-    margin: 30px auto;
-    padding: 40px;
-    border: 5px solid darkslategrey;
+    background: darkslategrey;
+    padding: 20px;
 }
