--- a/styles/styles_wdd.css
+++ b/styles/styles_wdd.css
@@ -5,14 +5,13 @@ body {
   margin: 0
 }
 /* Esta es la primera parte donde esta la foto mia*/
-#imagenredonda {
+.imagenredonda {
     width: 15em;
     height: 15em;
     border-radius:50%;
     margin: 0 auto;
     text-align: center;
     padding: 10px;
-    border: 4px solid #5D8FD0;
 }
 
 /*aqui editaremos la parte del navegador*/
