--- a/challenge_2/styles/styles-challenge-two.css
+++ b/challenge_2/styles/styles-challenge-two.css
@@ -6,10 +6,11 @@
 .imagen-cabecera {
     width: 100%;
 }
+
 .flex-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: center;
   padding: 0;
   margin: 0;
   list-style: none;
