--- a/Personal Website Proposal/styles/style-personal.css
+++ b/Personal Website Proposal/styles/style-personal.css
@@ -1,25 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Playfair+Display&display=swap");
 :root {
-  --primary-color: #7899D4;
-  --secondary-color: #000000;
-  --accent1-color: #7272AB;
+  --primary-color: #EBBFD7;
+  --secondary-color: #FBF0A4;
+  --third-color: #C4EDB3;
+  --accent1-color: #000000;
   --accent2-color: #ffffff;
-
+  --accent3-color: #A5DEFF;
   --heading-font: "Playfair Display";
   --paragraph-font: Montserrat, Helvetica, sans-serif;
-
-  --headline-color-on-white: #000000;
-  --headline-color-on-color: #ffffff; 
-  --paragraph-color-on-white: #000000; 
-  --paragraph-color-on-color: #ffffff;  
-  --paragraph-background-color: #7899D4;
 }
 body {
-  max-width: 960px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 4em;
   font-size: 18px;
   text-align: center;
+  color: var(--accent1-color);
+  background-image: linear-gradient(90deg, var(--primary-color), var(--secondary-color), var(--accent3-color), var(--third-color));
 }
 img {
   display: block;
@@ -29,27 +26,31 @@ img {
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
-  color: var(--headline-color-on-white);
+  color: var(--accent1-color);
 }
 h2 {
   text-align: center;
 }
 hr {
-  height: 3px;
+  height: 1px;
   margin: 35px 0;
   background: var(--accent1-color);
 }
 header {
   padding: 1em;
   text-align: center;
-  color: var(--headline-color-on-color);
-  background-color: var(--paragraph-background-color);
+  background-color: var(--accent2-color);
 }
 header > h1, header > h2 {
-  color: var(--headline-color-on-color);
+  color: var(--accent1-color);
 }
 p {
   font-family: var(--paragraph-font);
-  color: var(--paragraph-color-on-white);
+  color: var(--accent1-color);
   padding: 1em;
+}
+section {
+  padding: 1em;
+  text-align: center;
+  background-color: var(--accent2-color);
 }
