--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -77,6 +77,7 @@ nav a {
     height: 725px;
     background-color: #EE3224; /* For browsers that do not support gradients */
     background-image: linear-gradient(90deg, #EE3224, #ffffff);
+    margin: 200px 0;
 }
 .icon {
     width: 80px;
@@ -146,4 +147,7 @@ footer .social img {
 }
 main section img {
     box-sizing: border-box;
-} 
+}
+.mountains {
+    margin-bottom: 100px;
+}
