--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -98,6 +98,7 @@ nav a {
 .book:hover, .join:hover {
     background-color: #ffffff;
     color: #2D7FC9;
+    border-radius: 5px;
 }
 /* Esto es el parrafo que esta coloreado*/
 .msg {
