--- a/styles/styles_wdd.css
+++ b/styles/styles_wdd.css
@@ -1,105 +1,56 @@
-/*los colores de la pagina son estos:
-https://coolors.co/5d8fd0-c9e265-ff914d-ffde5a-000000-ffffff
-*/
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Playfair+Display&display=swap");
+:root {
+  --primary-color: #EBBFD7;
+  --secondary-color: #FBF0A4;
+  --third-color: #C4EDB3;
+  --accent1-color: #000000;
+  --accent2-color: #ffffff;
+  --accent3-color: #A5DEFF;
+  --heading-font: "Playfair Display";
+  --paragraph-font: Montserrat, Helvetica, sans-serif;
+}
 body {
-  margin: 0
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 4em;
+  font-size: 18px;
+  text-align: center;
+  color: var(--accent1-color);
+  background-image: linear-gradient(90deg, var(--primary-color), var(--secondary-color), var(--accent3-color), var(--third-color));
 }
-/* Esta es la primera parte donde esta la foto mia*/
-.imagenredonda {
-    width: 15em;
-    height: 15em;
-    border-radius:50%;
-    margin: 0 auto;
-    text-align: center;
-    padding: 10px;
+.img-circle {
+  display: block;
+  margin: 0 auto;
+  max-width: 300px;
+  border-radius:50%;
 }
-
-/*aqui editaremos la parte del navegador*/
-/*esto es para hacer una separacion entre los elementos y poner el fondo blanco*/
-nav {
-    text-align: center;
-    margin: 0 auto;
-    line-height: 3em;
-    background-color: #5D8FD0;
-    padding: 25px;
-  }
-  a {
-    font-size: 1.5em;
-    color: white;
-    padding: 25px;
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--heading-font);
+  color: var(--accent1-color);
 }
-
-/*esto es para quitar la linea que aparece debajo de los enlaces y hacer una separacion mas equitativa entre ellos*/
-nav a {
-  text-decoration: none;
-  padding: 10px;
+h2 {
+  text-align: center;
 }
-/*esto es para que los elementos cambien de color al pasar el cursor sobre ellos*/
-nav a:link, nav a:visited {
-  color: #000000;
+hr {
+  height: 1px;
+  margin: 35px 0;
+  background: var(--accent1-color);
 }
-
-/*En este ejemplo, agregaremos un selector para una pseudoclase. Las pseudoclases requieren cierta interacción por parte del usuario para que se aplique el estilo. Por ejemplo, con la pseudoclase :hover los estilos solo se aplicarán si el usuario pasa el puntero del mouse sobre el elemento.
-Cambiemos el fondo y el color de fuente de los enlaces de nuestro menú cuando el usuario pasa el cursor sobre ellos. Esta será una regla nueva, no una adición a ninguna regla existente.*/
-nav a:hover {
-  color: #ffffff;
-  background-color: #5D8FD0;
+header {
+  padding: 1em;
+  text-align: center;
+  background-color: var(--accent2-color);
 }
-
-/* esta es como el slogan de mi sitio web*/
-.mensaje_inspirador {
-    font-size: 1.5em;
-    line-height: 1.5em;
-    margin: 50px auto;
-    text-align: center;
-}
-
-/* esto es para la imagen de banner*/
-.banner {
-    line-height: 1.5em;
-    margin: 50px auto;
-    text-align: center;
-}
-
-img {
-    width: 80%;
-    display: block;
-    margin: 0 auto;
+header > h1, header > h2 {
+  color: var(--accent1-color);
 }
 p {
-    width: 100%;
+  font-family: var(--paragraph-font);
+  color: var(--accent1-color);
+  padding: 1em;
 }
-
-h1 {
-    text-align: center;
-    margin: 50px 0;
-
+section {
+  padding: 1em;
+  text-align: center;
+  background-color: var(--accent2-color);
 }
-
-/*Tenemos dos párrafos en nuestro HTML. Pero queremos apuntar sólo al párrafo que está dentro del pie de página, no al párrafo principal. Queremos darle un tamaño de fuente diferente. Si apuntamos al elemento p, ambos párrafos cambiarán. También podríamos darle a uno de ellos una clase o ID y apuntar a eso, pero usemos un selector de descendientes en su lugar.
-Podemos escribir nuestro selector con el elemento padre primero y luego el hijo (o descendiente a continuación).*/
-footer p {
-    font-size: 1.5em;
-    margin: 20px auto;
-    background-color: #5D8FD0;
-    color: white;
-    padding: 10px;
-    text-align: center;
-}
-
-
-  /*si queremos tener un color de fondo azul marino y un color de fuente blanco tanto para nuestra navegación como para nuestro encabezado, podemos usar una coma entre ellos para decir que podemos aplicar la regla a ambos selectores.
-nav, footer {
-    background-color: #5D8FD0;
-    color: white;
-    padding: 10px;
-    text-align: center;
-}
-*/
-
-/*
-Esto es para poner una linea azul en cada elemento
-* {
-    border: 2px solid blue;
-}
-*/
