--- a/positioning_activity/positionstyles.css
+++ b/positioning_activity/positionstyles.css
@@ -1,6 +1,7 @@
 /* CSS - Name: "positionstyles.css" */
 /* Activity 1 styles */
 .content1 {
+  /* This is the parent of the activity 2 boxes. */
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
@@ -57,51 +58,68 @@
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
-  background-color: red; 
+  background-color: red;
+  grid-column: 1/3;
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 300px; 
+  height: 200px; 
   background-color: green;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  width: 300px; 
+  height: 200px; 
   background-color: gold; 
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  grid-column: 1/3;
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(3,1fr);
+  justify-items: center;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: red; 
+  width: 300px; 
+  height: 400px; 
+  background-color: red;
+  grid-column: 1/2;
+  grid-row: 1/4; 
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
+  width: 300px; 
+  height: 133.33px; 
+  background-color: green;
+  grid-column: 2/3;
+  grid-row: 1/2; 
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: gold; 
+  width: 300px; 
+  height: 133.33px; 
+  background-color: gold;
+  grid-column: 2/3;
+  grid-row: 2/3; 
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
+  width: 300px; 
+  height: 133.33px; 
+  background-color: blue;
+  grid-column: 2/3;
+  grid-row: 3/4; 
 } 
 /* Activity 5 styles */ 
 .content5 {
