--- a/positioning_activity/positionstyles.css
+++ b/positioning_activity/positionstyles.css
@@ -60,7 +60,6 @@
   /* This is the parent of the activity 3 boxes. */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  justify-items: center;
 }
 .red3 {
   width: 100%; 
@@ -69,14 +68,19 @@
   grid-column: 1/3;
 } 
 .green3 {
-  width: 300px; 
+  width: 90%; 
   height: 200px; 
   background-color: green;
+  grid-template-columns: 2/2;
+  grid-template-rows: 2/3;
 } 
 .yellow3 {
-  width: 300px; 
+  width: 90%; 
   height: 200px; 
-  background-color: gold; 
+  background-color: gold;
+  grid-template-columns: 2/3;
+  grid-template-rows: 2/3;
+  justify-self: right;
 } 
 .blue3 {
   width: 100%;
