--- a/positioning_activity/positionstyles.css
+++ b/positioning_activity/positionstyles.css
@@ -128,39 +128,29 @@
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
-  grid-template-rows: repeat(3,1fr) ;
+  display:flexbox;
   height: 400px;
 }
 .red5 { 
   width: 100%; 
-  height: 80px; 
+  height: 100px; 
   background-color: red;
-  grid-column: 1/3;
-  grid-row: 1/2; 
 } 
 .green5 { 
-  width: 180px; 
-  height: 180px; 
+  width: 120px; 
+  height: 120px; 
   background-color: green;
-  z-index: 1;
-  grid-column: 1/2;
-  grid-row: 2/3;
-} 
+  float: left;
+}
 .yellow5 {
-  /*width: 100%; 
-  height: 240px;*/
-  background-color: gold; 
-  grid-column: 1/3;
-  grid-row: 2/3;
+  width: 100%; 
+  height: 200px;
+  background-color: gold;
 } 
 .blue5 {
   width: 100%; 
-  height: 80px; 
+  height: 100px; 
   background-color: blue;
-  grid-column: 1/3;
-  grid-row: 3/4; 
 } 
 /* Activity 6 styles */ 
 .content6 {
