--- a/positioning_activity/positionstyles.css
+++ b/positioning_activity/positionstyles.css
@@ -97,29 +97,28 @@
   grid-template-rows: repeat(3,1fr);
 }
 .red4 {
-  width: 300px; 
+  width: 100%; 
   height: 400px; 
   background-color: red;
   grid-column: 1/2;
   grid-row: 1/4;
-  justify-self:right;
 } 
 .green4 {
-  width: 300px; 
+  width: 100%; 
   height: 133.33px; 
   background-color: green;
   grid-column: 2/3;
   grid-row: 1/2;
 } 
 .yellow4 {
-  width: 300px; 
+  width: 100%; 
   height: 133.33px; 
   background-color: gold;
   grid-column: 2/3;
   grid-row: 2/3; 
 } 
 .blue4 {
-  width: 300px; 
+  width: 100%; 
   height: 133.33px; 
   background-color: blue;
   grid-column: 2/3;
