--- a/positioning_activity/positionstyles.css
+++ b/positioning_activity/positionstyles.css
@@ -34,11 +34,13 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  display: grid;
+  grid-template-columns: repeat(4,50px);
 }
 .red2 {
   width: 100px; 
   height: 100px; 
-  background-color: red; 
+  background-color: red;
 } 
 .green2 { 
   width: 100px; 
