--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -29,6 +29,8 @@ body {
 }
 header {
     background-color: #ffffff;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 /* Element Alignment */
 #hero-msg h1, #hero-msg h4 {
@@ -43,11 +45,17 @@ main section {
 /* Algunos ajustes para el logo*/
 #logo_link {   
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 /* Ajustes de la barra de navegacion */
 nav a:hover {
     background-color: #EE3224;
     color: #ffffff;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 nav a {
     background-color: #ffffff;
@@ -61,6 +69,24 @@ nav a {
 #hero-img {
     width: 100%;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h4 {
+    color: white;
+}
 /* Ajustes del titulo despues de la imagen hero*/
 .home-title {
     background-color: #2D7FC9;
@@ -68,12 +94,18 @@ nav a {
     font-size: 2em;
     margin-top: 10px;
 }
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+}
 /* Esta es una caja que contine la imagen*/
 #background {
     height: 725px;
     background-color: #EE3224; /* For browsers that do not support gradients */
     background-image: linear-gradient(90deg, #EE3224, #ffffff);
     margin: 200px 0;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 .icon {
     width: 80px;
@@ -101,6 +133,9 @@ nav a {
     background-color: #2D7FC9;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #000000;
 }
 .msg h2 {
     background-color: #2D7FC9;
@@ -118,6 +153,9 @@ footer {
     color: #EE3224;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a {
     color: #000000;
@@ -136,15 +174,79 @@ footer p a:hover {
 footer .social img {
     padding-top: 15px; 
 }
-.rivers-card, .camping-card, .rapids-card {
+.rivers-card{
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+} 
+.camping-card{
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+} 
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 .card-img {
-    border: 10px solid #EE3224
+    border: 10px solid #EE3224;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #000000;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 main section img {
     box-sizing: border-box;
 }
 .mountains {
     margin-bottom: 100px;
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #000000;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #ffffff;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
