--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -26,6 +26,7 @@ body {
     background-color: #ffffff;
     font-size: 22px;
     margin: 0;
+    padding: 0;
 }
 header {
     background-color: #ffffff;
