--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -29,7 +29,7 @@ body {
     padding: 0;
 }
 header {
-    background-color: #ffffff;
+    background-color:rgb(45, 127, 201, 0.6);
     display: grid;
     grid-template-columns: 150px auto;
 }
@@ -55,13 +55,12 @@ nav {
     justify-content: space-around;
 }
 nav a:hover {
-    background-color: #EE3224;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #2D7FC9;
 }
 nav a {
-    background-color: #ffffff;
     text-align: center;
-    color: #EE3224;
+    color: #ffffff;
     text-decoration: none;
     font-family: "Oswald", Helvetica, sans-serif;
     padding: 35px;
@@ -86,12 +85,13 @@ nav a {
     z-index: -1;
 }
 #hero-msg h4 {
-    color: white;
+    color: #ffffff;
+    text-shadow: 1px 1px 2px #000000, 0 0 1em #000000, 0 0 0.2em #000000;
 }
 /* Ajustes del titulo despues de la imagen hero*/
 .home-title {
-    background-color: #2D7FC9;
-    color: #ffffff;
+    color: #EE3224;
+    text-shadow: 1px 1px 2px #000000, 0 0 1em #000000, 0 0 0.2em #000000;
     font-size: 2em;
     margin-top: 10px;
 }
@@ -116,8 +116,8 @@ nav a {
 }
 /* Color de los botones*/
 .book, .join {
-    background-color: #2D7FC9;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #2D7FC9;
     text-align: center;
     text-decoration: none;
     font-family: Oswald, Helvetica, sans-serif;
@@ -127,8 +127,8 @@ nav a {
     border-radius: 5px;
 }
 .book:hover, .join:hover {
-    background-color: #ffffff;
-    color: #2D7FC9;
+    background-color: #2D7FC9;
+    color: #ffffff;
     border-radius: 5px;
 }
 /* Esto es el parrafo que esta coloreado*/
@@ -213,6 +213,9 @@ main section img {
     box-shadow: 5px 5px 10px #000000;
 }
 @media screen and (max-width: 900px) {
+    header {
+        background-color: #2D7FC9;
+    } 
     #hero, .home-grid {
         display: block;
         height: auto;
