--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@ Fonts are separated by a & */
   --heading-font: "Oswald";
   --paragraph-font: Open sans, Helvetica, sans-serif;
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #EE3224;  /* headlines on a white background */ 
+  --headline-color-on-white: #000000;  /* headlines on a white background */ 
   --headline-color-on-color: #ffffff; /* headlines on a colored background */ 
   --paragraph-color-on-white: #000000; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #ffffff; /* paragraph text on a colored background */ 
