--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -149,8 +149,9 @@ nav a {
 }
 /* Ajustes del footer*/
 footer {
-    background-color: #ffffff;
-    color: #EE3224;
+    background-color: #2D7FC9; /* For browsers that do not support gradients */
+    background-image: linear-gradient(90deg, #2D7FC9, #ffffff);
+    color: #000000;
     padding: 25px 50px;
     margin-top: 200px;
     display: flex;
@@ -162,7 +163,8 @@ footer a {
     text-decoration: none;
 }
 footer a:hover {
-    color: #EE3224;
+    color: #ffffff;
+    text-shadow: 1px 1px 2px #000000, 0 0 1em #000000, 0 0 0.2em #000000;
 }
 footer p {
     font-size: 1.2em;
@@ -260,6 +262,8 @@ main section img {
         margin: 0 auto;
     }
     footer {
+        background-color: #EE3224; /* For browsers that do not support gradients */
+        background-image: linear-gradient(90deg, #EE3224, #ffffff);
         margin-top: 25px;
     }
 }
